--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 
     <div class="card">
      <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
-       <%= image_tag "Hacker.svg" %>
+       <%= image_tag "Magician.svg" %>
        <h2>Un guide prend en charge votre demande</h2>
        <p>Nous analysons en toute confidentialité votre cahier des charges et prenons contact avec vous pour personnaliser le modus operandis</p>
        <!-- <a class="btn-default" href="#">Learn more</a> -->
@@ -45,17 +45,6 @@
 
   <%= form_tag('#', method: :get, class: 'form-search') do %>
   <div class="flexbox">
-  <%= submit_tag "Trouvez les bureaux de vos rêves", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+  <%= submit_tag "TROUVEZ LES BUREAUX DE VOS RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
   </div>
   <% end %>
-
-<div id="home-footer">
-  <ul  class="list-inline">
-    <li><%= link_to root_path, class: "footer-logo" do %>
-    <%= image_tag "the Real Estate Jungle footer.png" %>
-  <% end %></li>
-    <li><a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-    <li><a href=""><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-    <li><a href=""><i class="fa fa-users" aria-hidden="true"></i></a></li>
-  </ul>
-</div>
