--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   background-position: center;
+  background-attachment: fixed;
 }
 
 #banner-form {
