--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -9,7 +9,7 @@
 
     <%= form_tag('#', method: :get, class: 'form-search') do %>
     <div class="flexbox">
-      <%= submit_tag "Trouvez les bureaux de vos rêves", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+      <%= submit_tag "TROUVEZ LES BUREAUX DE VOS RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
     </div>
     <% end %>
   </div>
