--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,16 @@
 <div id="home-footer">
-  <ul  class="list-inline">
-    <li><%= link_to root_path, class: "footer-logo" do %>
-    <%= image_tag "TREJhome.png" %>
-  <% end %></li>
-    <li><a target="_blank" href="https://www.linkedin.com/in/gautierweigert/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-    <li><a href=""><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-    <li><a href=""><i class="fa fa-users" aria-hidden="true"></i></a></li>
-  </ul>
-</div>
+  <div class="container">
+    <div class="raw">
+    <div class="col-xs-12 col-sm-6 col-lg-4">
+        <ul  class="list-inline">
+          <li><%= link_to root_path, class: "footer-logo hidden-xs" do %>
+            <%= image_tag "TREJhome.png" %>
+            <% end %></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/gautierweigert/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+            <li><a href=""><i class="fa fa-users" aria-hidden="true"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
