sign in and sign up in progress

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,16 @@
 <div class="container">
   <div class="raw">
     <div class="col-sm-4 col-sm-offset-4">
-      <h2>Sign up</h2>
+      <h2 class="text-center">Sign up with social network links...</h2>
+      <%= render "devise/shared/socialnetworkslinks" %>
+      <h2 class="text-center">... Or sign up with the good old way</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
 
       <div class="form-inputs">
+        <%= f.input :first_name, required: true, autofocus: true %>
+        <%= f.input :last_name, required: true, autofocus: true %>
         <%= f.input :email, required: true, autofocus: true %>
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
         <%= f.input :password_confirmation, required: true %>
