--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
         <meta property="og:description" content="<%= meta_description %>" />
         <meta property="og:site_name" content="<%= meta_title %>" />
 
+
+        <!-- Linkedin Open Graph data -->
+        <meta property="og:title" content="<%= meta_title %>" />
+        <meta property="og:description" content="<%= meta_description %>" />
+        <meta property="og:url" content="<%= request.original_url %>" />
+        <meta property="og:image" content="<%= meta_image %>" />
+
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="<%= DEFAULT_META["twitter_account"] %>">
