--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container text-center home-container">
     <div class="text-center title-features">
-      <h1>Notre accompagnement</h1>
+      <h1>Plutôt coworking ou bureau classique ?</h1>
     </div>
     <div class="card">
      <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
