--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -7,7 +7,7 @@
     <h1>The <br> Real Estate <br> Jungle</h1>
     <p>Le guide qui vous accompagne dans votre recherche de bureaux</p>
 
-    <%= form_tag('#', method: :get, class: 'form-search') do %>
+    <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
     <div class="flexbox">
       <%= submit_tag "TROUVEZ LES BUREAUX DE VOS RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
     </div>
