--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,9 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "bootstrap-datepicker";
+@import "bootstrap-datetimepicker";
+@import "jquery.ui.all";
 
 // Your CSS partials
 @import "layouts/index";
