--- a/app/views/demands/new.html.erb
+++ b/app/views/demands/new.html.erb
@@ -1,4 +1,3 @@
-
 <div class="text-center">
   <h1>Votre recherche immobilière</h1>
   <p>Le temps estimé pour remplir le formulaire est de 3 minutes</p>
@@ -24,10 +23,8 @@
       <%= f.input :meeting_room_number, label: "De combien de salles de réunions avez-vous besoin ?", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal, nous ajusterons par la suite la taille des salles dont vous avez besoin pour organiser vos réunions. Ou laissez blanc si vous n'en avez pas besoin." %>
       <%= f.input :parking_number, label: "De combien de places de parking avez-vous besoin ?", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal ou laissez blanc si vous n'en avez pas l'utilité." %>
       <%= f.input :surface_type, label: "Quel type de surface recherchez-vous ?", collection: Demand::SPACES, error: "Merci de remplir ce champs pour valider le formulaire", hint: "Merci d'indiquer votre préférence." %>
-      <div class="input-group date">
-        <input type="text" class="form-control" name="move_in_date"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-      </div>
-      <%= f.input :move_in_date, class: "datepicker", value: Date.today.strftime('%d/%m/%Y'), label: "A quelle date souhaitez-vous vous installer dans vos nouveaux bureaux ?", placeholder: "DD/MM/YYYY", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
+      <!-- simple form date input/no date picker -->
+      <%= f.input :move_in_date, label: "A quelle date souhaitez-vous vous installer dans vos nouveaux bureaux ?", placeholder: "DD/MM/YYYY", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
       <%= f.input :other_spec, label: "Avez-vous des besoins spécifiques que vous souhaiteriez partager dès maintenant ?", hint: "Un besoin spécifique peut être par exemple: un grand plateau type industriel, une très grande salle de réunion, une terrasse, une contrainte de confidentialité, un besoin en salle serveurs, etc.", placeholder: "Nous recherchons un espace atypique avec une grande hauteur sous plafond..." %>
       <%= f.submit "Envoyer mon cahier des charges", class: "btn btn-primary btn-block" %>
       <% end %>
