--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
     <!-- Links when logged in -->
-    <%= link_to "MES DEMANDES", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "MES DEMANDES", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "PROFIL", "#", class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "#", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
