seo on home & links

--- a/app/views/demands/new.html.erb
+++ b/app/views/demands/new.html.erb
@@ -3,7 +3,7 @@
   <p>Le temps estimé pour remplir le formulaire est de 3 minutes</p>
 </div>
 <br>
-<div class="container datepicker">
+<div class="container demand-container">
   <div class="raw">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3 col-sm-offset-3">
       <%= simple_form_for @demand do |f| %>
