--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,50 +1,144 @@
 <%= render 'shared/banner' %>
 
 <div class="container text-center home-container">
-    <div class="text-center title-features">
-      <h1>Plutôt coworking ou bureau classique ?</h1>
-    </div>
-    <div class="card">
-     <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
-       <%= image_tag "Download-Computer.svg" %>
-       <h2>Renseignez en ligne votre cahier des charges </h2>
-       <p>Il vous suffit de remplir le formulaire en ligne nous décrivant les critères de votre recherche</p>
-       <!--  <a class="btn-default" href="#">Learn more</a> -->
-     </div>
-    </div>
-
-    <div class="card">
-     <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
-       <%= image_tag "Magician.svg" %>
-       <h2>Un guide prend en charge votre demande</h2>
-       <p>Nous analysons en toute confidentialité votre cahier des charges et prenons contact avec vous pour personnaliser le modus operandis</p>
-       <!-- <a class="btn-default" href="#">Learn more</a> -->
-     </div>
-    </div>
-    <div class="card">
-     <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
-       <%= image_tag "Apartment.svg" %>
-       <h2>Nous vous présentons les offres disponibles</h2>
-
-       <p>Nous travaillons avec l'ensemble des acteurs du marché donc pas de conflit d'intérêt. Nous recherchons les meilleures solutions (coworking, baux classiques court ou long terme)</p>
-       <!-- <a class="btn-default" href="#">Learn more</a> -->
-     </div>
-    </div>
-
-    <div class="card">
-      <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
-       <%= image_tag "Key.svg" %>
-       <h2>Nous gérons avec vous l'ensemble du projet</h2>
-
-       <p>Votre guide vous accompagne tout au long du projet, analyse du marché, visites, négociations et finalisation des accords</p>
-       <!-- <a class="btn-default" href="#">Learn more</a> -->
-      </div>
-    </div>
+  <div class="text-center title-features">
+    <h1><strong>Coworking</strong> ou <strong>bureau classique</strong> ?</h1>
   </div>
+  <div class="card">
+   <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
+     <%= image_tag "Download-Computer.svg", alt: "coworking" %>
+     <h2>Renseignez en ligne votre cahier des charges </h2>
+     <p>Il vous suffit de remplir le formulaire en ligne nous décrivant les critères de votre recherche</p>
+     <!--  <a class="btn-default" href="#">Learn more</a> -->
+   </div>
+ </div>
+
+ <div class="card">
+   <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
+     <%= image_tag "Magician.svg", alt: "coworking" %>
+     <h2>Un guide prend en charge votre demande</h2>
+     <p>Nous analysons en toute confidentialité votre cahier des charges et prenons contact avec vous pour personnaliser le modus operandis</p>
+   </div>
+ </div>
+ <div class="card">
+   <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
+     <%= image_tag "Apartment.svg", alt: "coworking" %>
+     <h2>Nous vous présentons les offres disponibles</h2>
+
+     <p>Nous travaillons avec l'ensemble des acteurs du marché donc pas de conflit d'intérêt. Nous recherchons les meilleures solutions (Coworking, baux classiques court ou long terme)</p>
+   </div>
+ </div>
+
+ <div class="card">
+  <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
+   <%= image_tag "Key.svg", alt: "coworking" %>
+   <h2>Nous gérons avec vous l'ensemble du projet</h2>
+
+   <p>Votre guide vous accompagne tout au long du projet, analyse du marché, visites, négociations et finalisation des accords</p>
+ </div>
+</div>
+</div>
 
 
-  <%= form_tag('#', method: :get, class: 'form-search') do %>
-  <div class="flexbox">
-  <%= submit_tag "TROUVEZ LES BUREAUX DE VOS RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+<% if user_signed_in? %>
+<%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+<div class="flexbox">
+  <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+</div>
+<% end %>
+<% else %>
+<%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
+<div class="flexbox">
+  <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+</div>
+<% end %>
+<% end %>
+
+<div class="container">
+  <div class="row">
+    <ul class="cards">
+
+      <li class="cards_item">
+        <div class="card-company-type">
+
+          <div class="card_image">
+            <%= image_tag "lionbaby.jpg", alt: "startup" %>
+          </div>
+
+          <div class="card_content">
+            <h2 class="card_heading">Jeunes pousses</h2>
+            <p>Les <em>entrepreneurs</em>, seuls ou avec une petite équipe, font souvent face à la contrainte de la solitude. Louer des bureaux représente un budget conséquent et avoir une compréhension claire du marché de l'<strong>immobilier d'entreprise</strong> n'est pas chose facile. Il existe beaucoup de solutions permettant de limiter les investissements (<strong>Coworking</strong> ou <strong>sous-location</strong> par exemple) et de bénéficier de services inclus.</p>
+
+            <% if user_signed_in? %>
+            <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+            <div class="flexbox">
+              <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+            </div>
+            <% end %>
+            <% else %>
+            <%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
+            <div class="flexbox">
+              <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+            </div>
+            <% end %>
+            <% end %>
+          </div>
+        </div>
+      </li>
+
+      <li class="cards_item">
+        <div class="card-company-type">
+
+          <div class="card_image">
+            <%= image_tag "lionyoung.jpg", alt: "startup" %>
+          </div>
+
+          <div class="card_content">
+            <h2 class="card_heading">Startups à forte croissance</h2>
+            <p>Les <em>startups</em> connaissant une croissance forte font face à différents challenges comme les recrutements, le développement du business et toutes les autres tâches opérationnelles du quotidien. L'analyse de ses besoins en immobilier ainsi que la recherche des espaces de travail idoines ajoute à cette charge de travail. Prendre une décision quant s'installer dans un espace de <strong>Coworking</strong> ou prendre un bail classique est très stratégique et peut avoir des conséquences financières et logistiques lourdes.</p>
+            <% if user_signed_in? %>
+            <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+            <div class="flexbox">
+              <%= submit_tag "TROUVER UN ESPACE FLEXIBLE", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+            </div>
+            <% end %>
+            <% else %>
+            <%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
+            <div class="flexbox">
+              <%= submit_tag "TROUVER UN ESPACE FLEXIBLE", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+            </div>
+            <% end %>
+            <% end %>
+          </div>
+        </div>
+      </li>
+
+      <li class="cards_item">
+        <div class="card-company-type">
+
+          <div class="card_image">
+            <%= image_tag "lionold.jpg", alt: "startup" %>
+          </div>
+
+          <div class="card_content">
+            <h2 class="card_heading">Grands groupes</h2>
+            <p>La donne change et les <em>grandes entreprises</em> l'ont bien compris. Face à la mutation des modes de travail (<strong>Coworking</strong>, <strong>bureaux partagés</strong>), au besoin d'attirer et de retenir les talents (en prenant en compte les comportements des nouvelles générations) et de stimuler l'innovation des ses collaborateurs, elles font de plus en plus le choix d'installer certaines équipes dans des espaces de <strong>Coworking</strong>.</p>
+            <% if user_signed_in? %>
+            <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+            <div class="flexbox">
+              <%= submit_tag "TROUVER UN ESPACE STIMULANT", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+            </div>
+            <% end %>
+            <% else %>
+            <%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
+            <div class="flexbox">
+              <%= submit_tag "TROUVER UN ESPACE STIMULANT", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+            </div>
+            <% end %>
+            <% end %>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
-  <% end %>
+</div>
