--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -10,13 +10,13 @@
     <% if user_signed_in? %>
     <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
     <div class="flexbox">
-      <%= submit_tag "TROUVEZ LES BUREAUX DE VOS RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+      <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
     </div>
     <% end %>
     <% else %>
-    <%= form_tag('#', method: :get, class: 'form-search') do %>
+    <%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
     <div class="flexbox">
-    <%= submit_tag "TROUVEZ LES BUREAUX DE VOS RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+    <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
     </div>
     <% end %>
     <% end %>
