--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,8 +11,8 @@
 
     <!-- Links when logged in -->
     <%= link_to "MES DEMANDES", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "PROFIL", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "#", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%#= link_to "PROFIL", edit_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "CONTACTEZ-NOUS AU - 06 17 98 75 96", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Avatar with dropdown menu -->
     <div class="navbar-wagon-item">
@@ -22,12 +22,12 @@
 
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
-            <%= link_to "#" do %>
+            <%= link_to edit_user_registration_path do %>
             <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
             <% end %>
           </li>
           <li>
-            <%= link_to "#" do %>
+            <%= link_to root_path do %>
             <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
             <% end %>
           </li>
@@ -42,8 +42,8 @@
     <% else %>
     <!-- Login link (when logged out) -->
     <ul class="list-inline">
-      <li><%= link_to t("#", default: "BLOG"), root_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
-      <li><%= link_to t(".sign_in", default: "LOGIN"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <li><%= link_to t(".profile", default: "CONTACTEZ-NOUS AU - 06 17 98 75 96"), root_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+      <li><%= link_to t(".sign_in", default: "S'IDENTIFIER"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
         <% end %>
       </li>
     </ul>
@@ -54,9 +54,24 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Démarrer</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Log out</a></li>
+        <li>
+          <%= link_to new_user_session_path do %>
+          <i class="fa fa-user"></i> <%= t(".sign_in", default: "S'identifier") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to root_path do %>
+          <i class="fa fa-home"></i> <%= t(".sign_in", default: "Home") %>
+          <% end %>
+        <li>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+          <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+          <!-- Old list -->
+        <!-- <li><a href="#">S'identifier</a></li> -->
+        <!-- <li><a href="#">Home</a></li> -->
+        <!-- <li><a href="#">Log out</a></li> -->
       </ul>
     </div>
   </div>
