--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -34,6 +34,7 @@ border: 1px solid rgba(0, 0, 0, 0.1);
   width: auto;
   padding: 15px 25px;
   margin-bottom: 50px;
+  margin-top: 50px;
   font-family: 'Montserrat_light', sans-serif;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   // border: 1px solid rgba(0, 0, 0, 0.1);
