--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,7 +47,7 @@
 </div>
 <% end %>
 <% else %>
-<%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
+<%= link_to new_user_session_path, method: :get, class: 'form-search' do %>
 <div class="flexbox">
   <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
 </div>
@@ -78,7 +78,7 @@
             <% else %>
             <%= link_to new_user_session_path, method: :get, class: 'form-search' do %>
             <div class="flexbox">
-              <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+              <%= submit_tag "TROUVER MES PREMIERS BUREAUX", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
             </div>
             <% end %>
             <% end %>
