--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,7 +72,7 @@
             <% if user_signed_in? %>
             <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
             <div class="flexbox">
-              <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+              <%= submit_tag "TROUVER MES PREMIERS BUREAUX", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
             </div>
             <% end %>
             <% else %>
