--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,30 @@
 <div class="container">
-  <div class="raw">
-    <div class="col-sm-4 col-sm-offset-4">
-      <h2 class="text-center">Sign up with social network links...</h2>
-      <%= render "devise/shared/socialnetworkslinks" %>
-      <h2 class="text-center">... Or sign up with the good old way</h2>
+  <div class="row">
+    <div class=" col-xs-12 col-sm-6 col-sm-offset-3">
+      <div class="form-login">
+        <h2>Sign up with social network links...</h2>
+        <%= render "devise/shared/socialnetworkslinks" %>
+        <h2>... Or sign up with the good old way</h2>
 
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= f.error_notification %>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
 
-      <div class="form-inputs">
-        <%= f.input :first_name, required: true, autofocus: true %>
-        <%= f.input :last_name, required: true, autofocus: true %>
-        <%= f.input :email, required: true, autofocus: true %>
-        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-        <%= f.input :password_confirmation, required: true %>
+        <div class="form-inputs">
+          <%= f.input :first_name, required: true, autofocus: true, label: "Prénom" %>
+          <%= f.input :last_name, required: true, autofocus: true, label: "Nom" %>
+          <%= f.input :phone_number, required: true, autofocus: true, label: "Numéro de téléphone" %>
+          <%= f.input :email, required: true, autofocus: true %>
+          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), label: "Mot de passe" %>
+          <%= f.input :password_confirmation, required: true, label: "Confirmation du mot de passe" %>
+        </div>
+
+        <div class="form-actions">
+          <%= f.button :submit, "Sign up" %>
+        </div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
       </div>
-
-      <div class="form-actions">
-        <%= f.button :submit, "Sign up" %>
-      </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
