--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,7 +8,7 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 .title-features h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 25px;
-  color: #00C29A;
+  color: #373942;
 }
 
 .card {
@@ -49,6 +49,14 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 .form-search {
   text-align: center;
   margin-top: 50px;
+}
+
+// span for highlighting text
+
+.highlight {
+display: inline-block;
+box-shadow: inset 0px -12px #00C29A;
+font-weight: bold;
 }
 
 // Cards CSS for type of company
@@ -103,6 +111,7 @@ $card-radius:         0;
       .card_image {
         img {
           width: 100%;
+          // background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 80%)
           // border-top-left-radius: ( $card-radius - $card-border-width );
           // border-top-right-radius: ( $card-radius - $card-border-width );
         }
