metatag head & navbar update

--- a/app/assets/stylesheets/components/_sign_in.scss
+++ b/app/assets/stylesheets/components/_sign_in.scss
@@ -17,4 +17,10 @@
     color: white;
     font-size: 15px;
   }
+  .help-block {
+    font-size: 10px;
+  }
+  .form-control {
+    font-size: 15px;
+  }
 }
