--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="coworking, startup, startups, immobilier, immobilier d'entreprises, bureaux, bureau, conseil, négociation, transaction, entreprises">
     <title><%= meta_title %></title>
         <meta name="description" content="<%= meta_description %>">
 
