--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <!-- Links when logged in -->
     <%= link_to "MES DEMANDES", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
     <%#= link_to "PROFIL", edit_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "CONTACTEZ-NOUS AU - 06 17 98 75 96", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "CONTACTEZ-NOUS 06 17 98 75 96", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Avatar with dropdown menu -->
     <div class="navbar-wagon-item">
@@ -42,7 +42,7 @@
     <% else %>
     <!-- Login link (when logged out) -->
     <ul class="list-inline">
-      <li><%= link_to t(".profile", default: "CONTACTEZ-NOUS AU - 06 17 98 75 96"), root_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+      <li><%= link_to t(".profile", default: "CONTACTEZ-NOUS 06 17 98 75 96"), root_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
       <li><%= link_to t(".sign_in", default: "S'IDENTIFIER"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
         <% end %>
       </li>
