--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -95,7 +95,7 @@
 
           <div class="card_content">
             <h2 class="card_heading"><span class="highlight">Startups</span> à forte croissance</h2>
-            <p>Les <em>startups</em> connaissant une croissance forte font face à différents challenges comme les recrutements, le développement du business et toutes les autres tâches opérationnelles du quotidien. L'analyse de ses besoins en immobilier ainsi que la recherche des espaces de travail idoines ajoute à cette charge de travail. Prendre une décision quant s'installer dans un espace de <strong>Coworking</strong> ou prendre un bail classique est très stratégique et peut avoir des conséquences financières et logistiques lourdes.</p>
+            <p>Les <em>startups</em> connaissant une croissance forte font face à différents challenges comme les recrutements, le développement du business et toutes les autres tâches opérationnelles du quotidien. L'analyse de ses besoins en immobilier ainsi que la recherche des espaces de travail idoines ajoutent à cette charge de travail. Prendre une décision quant à s'installer dans un espace de <strong>Coworking</strong> ou prendre un bail classique est très stratégique et peut avoir des conséquences financières et logistiques lourdes.</p>
             <% if user_signed_in? %>
             <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
             <div class="flexbox">
