--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -11,13 +11,13 @@
 }
 
 
-.banner-content h1 {
-  font-family: 'Bungee Shade', cursive;
-  font-size: 40px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  margin-bottom:0px;
-}
+// .banner-content h1 {
+//   font-family: 'Bungee Shade', cursive;
+//   font-size: 40px;
+//   font-weight: bold;
+//   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+//   margin-bottom:0px;
+// }
 
 .banner p {
   font-size: 20px;
@@ -50,6 +50,16 @@
   border-color: #00C29A;
 }
 
+.brand-banner h1 {
+  position: relative;
+  // left: 50%;
+  // top: 50%;
+  font-family: 'Bungee Shade', cursive;
+  font-size: 40px;
+  font-weight: bold;
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  margin-bottom:0px;
+}
 
 
 // CSS animation for tagline V2
